--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -2,17 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type='number'] {
+input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
 
-input[type='number']::-webkit-inner-spin-button {
+input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type='number']::-webkit-outer-spin-button {
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+body {
+  font-family: "sans-serif";
+}
+
+.leaflet-container {
+  height: 80vh;
+  width: 100vh;
 }
